# productintel

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
agent/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
agent/alembic/: env.py
agent/alembic/versions/: 0001_initial.py  0002_trace_events.py  0003_stories.py
agent/app/: agent.py  config.py  db.py  embeddings.py  ingest.py  main.py  models.py  retrieval.py  seam.py  seed_stories.py  work.py
corpus/: architecture.md  knowledge-module.md
docs/: why-i-rebuilt-on-adk.md
docs/adr/: 0001-record-architecture-decisions.md  0002-polyglot-service-architecture.md  0003-google-adk-agent-framework.md  0004-python-and-uv.md  0005-fastapi-api-layer.md  0006-litellm-provider-agnostic-models.md  0007-postgres-pgvector-datastore.md  0008-sqlalchemy-alembic-data-layer.md  0009-reuse-nextjs-frontend.md  0010-sse-streaming-transport.md  0011-monorepo-layout.md  0012-docker-compose-packaging.md  0013-observability-otel-langfuse.md  0014-defer-auth-jwt-bearer.md  0015-knowledge-first-vertical-slice.md  0016-callback-seam-guardrails-tracing.md  0017-coordinator-llm-delegation.md  0018-adk-native-otel-langfuse-traces.md  README.md  template.md
web/: .env.local.example  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/chat/: route.ts
